# duraagent

./: README.md  app.py  index.html  pyproject.toml  run_project.py
.devcontainer/: Dockerfile  devcontainer.json
demos/: demo_agent_loop.py  demo_durability.py  demo_evolution.py  demo_full.py
duraagent/: __init__.py  agent.py  autonomy.py  contracts.py  events.py  evolution.py  guardrails.py  harness.py  inspector.py  llm.py  memory.py  metrics.py  rag.py  rewards.py  skills.py  state_store.py  tracing.py  types.py  workflow.py
duraagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sample_project/: calculator.py  conftest.py  test_calculator.py  test_user_service.py  user_service.py
tests/: test_agent.py  test_events.py  test_harness.py  test_rewards.py  test_state_store.py  test_workflow.py
